--- a/index.html
+++ b/index.html
@@ -7,36 +7,85 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <title>VR Cafe</title>
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" >
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Kara's VR Cafe</title>
 </head>
 <body>
-    
-    <footer>
-        <div>
-            <h5>Links</h5>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Sites</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+    <!--Beginning of header/jumbotron-->
+    <header class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="row align-items-start justify-content-between">
+                <div class="col">
+                    <i class="fas fa-vr-cardboard"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </div>
+            <div class="row align-items-end justify-content-center">
+                <div class="col mx-auto">
+                    <a class="btn btn-light btn-lg" id="reserveButton" role="button"  >Reserve A Time</a>
+                </div>
+            </div>
         </div>
-        <div>
-            <h5>Social</h5>
-            <a href="http://instagram.com/">Instagram</a>
-            <a href="http://facebook.com/">Facebook</a>
-            <a href="http://twitter.com/">Twitter</a>
-            <a href="http://youtube.com/">YouTube</a>
+    </header>
+    <!--End of header/jumbotron-->
+
+    <!--Main Body-->
+    <div class="container">
+        <div  class="row row-content align-items-center">
+            <div class="col">
+                <div class="media">
+                    <img class="" src="" alt="" />
+                    <div class="media-body align-self-center">
+                        <h3>Coffee & Food</h3>
+                        <p class="">Exjoy our quiet coffee shop for reading or coding. Take your drinks and food with you to enjoy during your VR experience.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-            Tel: 1-206-555-1234<br />
-            Email: campsites@nucamp.co
+
+    </div>
+    <!--End of Main Body-->
+
+    <!--Beginning of footer-->
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 col-sm-2 offset-1">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">VR Info</a></li>
+                        <li><a href="#">Event/Group rental</a></li>
+                        <li><a href="#">Coffee Shop</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-5 text-center">
+                    <h5>Social</h5>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <a role="button" class="btn btn-link" href="tel:+5555555555"><i class="fa fa-phone fa-lg text-primary"></i> 1-555-555-5555 </a><br />
+                    <a role="button" class="btn btn-link" href="mailto:ksquared9595@gmail.com"><i class="fa fa-envelope fa-lg text-primary"></i> Email us</a>
+                </div>
+            </div>
         </div>
     </footer>
+    <!--End of Footer-->
 
    <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> 
+
 </body>
 </html>
