monday improvements footer is done

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="container">
             <div class="row align-items-start justify-content-between no-gutters m-o p-0">
                 <div class="col-sm-1">
-                    <img src="img/kvrlogo.svg" alt="Kara's VR Cafe Logo" height="75px" />
+                    <img src="img/kvrlogo.svg" alt="Kansas City VR Cafe Logo" height="75px" />
                 </div>
                 <div class="col-sm-1">
-                    <img src="img/yellowhammie.svg" alt="Dropdown toggle" height="40px"/>
+                    <img src="img/yellowhammie.svg" alt="Dropdown toggle" height="30px"/>
                 </div>
             </div>
             
@@ -37,10 +37,13 @@
             <div class="col">
                 <a class="btn btn-light btn-lg btn-outline-dark mx-auto" id="reserveButton" role="button"  >Reserve A Time</a>
             </div>
+            <div class="col">
+                <h1>Kansas City Virtual Reality Cafe</h1>
+            </div>
         </div>
-        <div  class="row row-content align-items-center">
+        <div  class="row row-content2 align-items-center">
             <div class="media col">
-                <img class="images .d-none .d-sm-block" src="#" alt="#" />
+                <img class="images img-thumbnail img-fluid d-none d-sm-block" src="img/beatsaber.jpg" alt="Beat Saber logo" />
                 <div class="media-body align-self-center">
                         <h3>Your VR Experience</h3>
                         <p class=".d-sm-none .d-md-block">Check out our game options, pricing and room options.</p>
@@ -49,28 +52,28 @@
         </div>
         <div  class="row row-content align-items-center">
             <div class="media col">
-                <img class="images .d-none .d-sm-block" src="#" alt="#" />
-                <div class="media-body align-self-center">
+                <img class="images img-thumbnail img-fluid d-none d-sm-block" src="img/coffeeshop.jpg" alt="Woman and man at a coffee shop" />
+                <div class="media-body order-first align-self-center">
                         <h3>Coffee & Food</h3>
                         <p class=".d-sm-none .d-md-block">Enjoy our quiet coffee shop for reading or coding. Take your drinks and food with you to enjoy during your VR experience.</p>
                 </div>
             </div>
         </div>
-        <div  class="row row-content align-items-center">
+        <div  class="row row-content2 align-items-center">
             <div class="media col">
-                <img class="images .d-none .d-sm-block" src="#" alt="#" />
+                <img class="images img-thumbnail img-fluid d-none d-sm-block" src="img/celebration.jpg" alt="Group of people celebrating" />
                 <div class="media-body align-self-center">
                         <h3>Event rental</h3>
-                        <p class=".d-sm-none .d-md-block">We can set up a custom experience for virtually any occasion. Looking for a fun way to reward employees and build teamwork? Tired of boring wedding receptions? Girl scouts looking to explore the world or the universe? All these and more are possible. </p>
+                        <p class=".d-sm-none .d-md-block">We can set up a custom experience for any occasion. Birthdays,   weddings receptions, girl/boy scouts, or employee team building.  </p>
                 </div>
             </div>
         </div>
         <div  class="row row-content align-items-center">
             <div class="media col">
-                <img class="images .d-none .d-sm-block" src="#" alt="#" />
-                <div class="media-body align-self-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3098.297533480975!2d-94.64416688218682!3d39.0541331389114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0ee065562b46b%3A0xb0533075c34008f4!2sMerriam%20Ln%2C%20Kansas%20City%2C%20KS%2066103!5e0!3m2!1sen!2sus!4v1609779558943!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <div class="media-body order-first align-self-center">
                         <h3>About Us</h3>
-                        <p class=".d-sm-none .d-md-block">Where are we? I mean, in the real world...</p>
+                        <p class="d-sm-none d-md-block">Where are we? I mean, in the real world...</p>
                 </div>
             </div>
         </div>
@@ -80,29 +83,42 @@
     <!--Beginning of footer-->
     <footer class="site-footer">
         <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-2 offset-1">
-                    <h5>Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">VR Info</a></li>
-                        <li><a href="#">Event/Group rental</a></li>
-                        <li><a href="#">Coffee Shop</a></li>
-                        <li><a href="#">Contact</a></li>
+            <div class="row nav justify-content-center nav-pills">
+                    <ul class="nav nav-pills">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">VR INFO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"href="#">EVENT RENTAL</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"href="#">COFFEE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"href="#">CONTACT</a>
+                        </li>
                     </ul>
-                </div>
-                <div class="col-6 col-sm-5 text-center">
-                    <h5>Social</h5>
+            </div>
+            <div class="row">
+                <div class="col text-center">
                     <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
                     <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
                     <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
                     <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+5555555555"><i class="fa fa-phone fa-lg text-primary"></i> 1-555-555-5555 </a><br />
+            </div>
+            <div class="row">
+                <div class="col text-right">
+                    <a role="button" class="btn btn-link" href="tel:+5555555555"><i class="fa fa-phone fa-lg text-primary"></i> 1-555-555-5555 </a>
+                </div>
+                <div class="col">
                     <a role="button" class="btn btn-link" href="mailto:ksquared9595@gmail.com"><i class="fa fa-envelope fa-lg text-primary"></i> Email us</a>
                 </div>
             </div>
+            
         </div>
     </footer>
     <!--End of Footer-->
