--- a/index.html
+++ b/index.html
@@ -39,8 +39,17 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col doit">
-                <h1>Kansas City Virtual Reality Cafe</h1>
+                <div class="col-sm-6 doit">
+                    <h1>Kansas City Virtual Reality Cafe</h1>
+                </div>
+                <div class="col-sm-6 wrapper">
+                    <input type="checkbox">
+                    <div class="video">
+                        <video src="img/beatsaber1smallvid.mp4" loop muted autoplay></video>
+                    </div>
+                    <div class="text">
+                        <span data-text="Schedule a time"></span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -53,7 +62,7 @@
         <!--Scheduler here. This is temp layout and will be replaced by a working backend scheduling function in later classes.-->
         <div class="row sticky-top" id="beSticky">
             <div class="col d-flex justify-content-center">
-                <button class="btn btn-light btn-lg btn-outline-dark text-center" id="reserveButton" role="button"  >Reserve A Time</button>
+               <!--Future Schedule-->
             </div>
         </div>
         
@@ -85,14 +94,14 @@
                 </div>
             </div>
         </div>
-        <div  class="row row-content align-items-center">
-            <div class="media col">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3098.297533480975!2d-94.64416688218682!3d39.0541331389114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0ee065562b46b%3A0xb0533075c34008f4!2sMerriam%20Ln%2C%20Kansas%20City%2C%20KS%2066103!5e0!3m2!1sen!2sus!4v1609779558943!5m2!1sen!2sus" width="600" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                <div class="media-body order-first align-self-center">
+        <div  class="row row-content mb-4 align-items-center">
+            <div class="map-responsive col-md-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3098.297533480975!2d-94.64416688218682!3d39.0541331389114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0ee065562b46b%3A0xb0533075c34008f4!2sMerriam%20Ln%2C%20Kansas%20City%2C%20KS%2066103!5e0!3m2!1sen!2sus!4v1609779558943!5m2!1sen!2sus" width="370" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+            <div class="col-md-6 align-self-center">
                         <h3>About Us</h3>
                         <p class="d-sm-none d-md-block">Where are we? I mean, in the real world...</p>
-                </div>
-            </div>
+            </div>  
         </div>
     </div>
     <!--End of Main Body-->
